--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     .err { color:#b42318; }
     .mt { margin-top: 20px; }
 
-    /* 頂部公告條 */
     .notice {
       background: var(--info);
       border: 1px solid var(--info-bd);
@@ -33,7 +32,6 @@
       margin: 0 0 16px;
     }
 
-    /* iOS / Safari：確保按鈕文字可見，移除預設外觀 */
     .btn, input[type="submit"], input[type="reset"], button {
       color:#111827 !important;
       -webkit-text-fill-color:#111827 !important;
@@ -44,15 +42,13 @@
     }
     .btn:disabled { opacity:.6; cursor:not-allowed; }
 
-    /* 讓狀態卡片預設隱藏；加上 ?debug=1 會顯示 */
+    /* 狀態卡預設隱藏；?debug=1 顯示 */
     .debug-hidden { display:none; }
   </style>
-  <!-- LIFF SDK -->
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
   <div class="wrap">
-    <!-- 訂單可外送時間公告 -->
     <div class="notice">
       <b>訂單可外送時間：</b><span id="deliverWindow">08:00–17:00</span>
       <span class="muted">（請在此區間內選擇；<b>希望送達</b>需早於<b>最晚送達</b>）</span>
@@ -60,7 +56,7 @@
 
     <h1>LIFF Minimal</h1>
 
-    <!-- 狀態卡片（預設隱藏，?debug=1 時顯示） -->
+    <!-- 狀態卡（預設隱藏） -->
     <div id="debugCard" class="card debug-hidden">
       <div class="row">狀態：<span id="status">初始化中…</span></div>
       <div class="row">顯示名稱：<span id="displayName">—</span></div>
@@ -72,18 +68,17 @@
       </div>
     </div>
 
-    <!-- 訂單表單（欄位順序與試算表一致） -->
     <form id="orderForm" class="card mt" autocomplete="on">
       <h2>訂購資料</h2>
       <div class="grid">
         <div>
           <label>客戶/店家名稱
-            <input name="customerName" required placeholder="阿綸熱炒/小林飲料店">
+            <input name="customerName" required placeholder="張三火鍋/小林飲料店">
           </label>
         </div>
         <div>
           <label>外送地址
-            <input name="address" required placeholder="新北市三重區○○路 1 號">
+            <input name="address" required placeholder="台北市○○區○○路 1 號">
           </label>
         </div>
         <div>
@@ -115,7 +110,7 @@
         </div>
         <div>
           <label>備註
-            <textarea name="note" rows="3" ></textarea>
+            <textarea name="note" rows="3" placeholder="送達時間區間、冰塊規格、上樓需求等"></textarea>
           </label>
         </div>
       </div>
@@ -131,91 +126,87 @@
   </div>
 
   <script>
-    // ===== 你的 LIFF 與後端設定 =====
-    const LIFF_ID = "2008199393-AMqeEVBY"; // 你的 LIFF ID（已寫入）
+    // ===== 設定 =====
+    const LIFF_ID = "2008199393-AMqeEVBY";
     const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyclYM-2pflurusfn5NuwGv2farNzrFUpdXR3u3t58_cUOXRx-7lMQ5EFMjcWL7SHGC/exec";
 
-    // ===== 外送可下單時間（分鐘） =====
-    const OPEN_MIN  = 8 * 60;   // 08:00
-    const CLOSE_MIN = 17 * 60;  // 17:00
+    const OPEN_MIN  = 8*60;  // 08:00
+    const CLOSE_MIN = 17*60; // 17:00
 
-    const $ = (s) => document.querySelector(s);
-    const byName = (n) => document.querySelector(`[name="${n}"]`);
+    const $ = (s)=>document.querySelector(s);
+    const byName=(n)=>document.querySelector(`[name="${n}"]`);
 
-    // 預設隱藏的狀態卡：?debug=1 時顯示
-    const SHOW_DEBUG = new URL(location.href).searchParams.has("debug");
-    if (SHOW_DEBUG) $("#debugCard").classList.remove("debug-hidden");
-
-    // 顯示頂部外送時間
-    function fmt(min){ const h=String(Math.floor(min/60)).padStart(2,"0"); const m=String(min%60).padStart(2,"0"); return `${h}:${m}`;}
-    $("#deliverWindow").textContent = `${fmt(OPEN_MIN)}–${fmt(CLOSE_MIN)}`;
-
-    // 用網址 ?key=value 預填（你之前就有的）
-    function prefillFromQuery() {
-      const q = new URLSearchParams(location.search);
-      ["customerName","address","phone","orderDate","startTime","endTime","qty","note"]
-        .forEach(k => { const v = q.get(k); if (v !== null) byName(k).value = decodeURIComponent(v); });
+    // 狀態卡：?debug=1 顯示
+    if (new URL(location.href).searchParams.has("debug")) {
+      $("#debugCard").classList.remove("debug-hidden");
     }
 
-    // ====== 本地記住顧客資料（依 userId） ======
-    const STORE_VER = "v1";
-    function keyFor(uid){ return `liff:defaults:${STORE_VER}:${uid}`; }
+    // 公告文字
+    function fmt(min){const h=String(Math.floor(min/60)).padStart(2,"0"); const m=String(min%60).padStart(2,"0"); return `${h}:${m}`;}
+    $("#deliverWindow").textContent = `${fmt(OPEN_MIN)}–${fmt(CLOSE_MIN)}`;
 
+    // 預填（網址）
+    function prefillFromQuery(){
+      const q = new URLSearchParams(location.search);
+      ["customerName","address","phone","orderDate","startTime","endTime","qty","note"]
+        .forEach(k=>{const v=q.get(k); if(v!==null) byName(k).value=decodeURIComponent(v);});
+    }
+
+    // ===== 記住顧客資料（localStorage，依 userId） =====
+    const STORE_VER="v1";
+    function keyFor(uid){ return `liff:defaults:${STORE_VER}:${uid}`; }
     function loadDefaults(uid){
       try{
-        const s = localStorage.getItem(keyFor(uid));  // localStorage：跨分頁持久化 :contentReference[oaicite:2]{index=2}
+        const s = localStorage.getItem(keyFor(uid));
         if(!s) return;
-        const data = JSON.parse(s);
-        if (data.customerName && !byName("customerName").value) byName("customerName").value = data.customerName;
-        if (data.address && !byName("address").value)          byName("address").value       = data.address;
-        if (data.phone && !byName("phone").value)              byName("phone").value         = data.phone;
-      }catch(e){ console.warn("loadDefaults failed", e); }
+        const d = JSON.parse(s);
+        if(d.customerName && !byName("customerName").value) byName("customerName").value=d.customerName;
+        if(d.address && !byName("address").value) byName("address").value=d.address;
+        if(d.phone && !byName("phone").value) byName("phone").value=d.phone;
+      }catch{}
     }
     function saveDefaults(uid){
       try{
         const data = {
           customerName: byName("customerName").value.trim(),
-          address:      byName("address").value.trim(),
-          phone:        byName("phone").value.trim(),
+          address: byName("address").value.trim(),
+          phone: byName("phone").value.trim(),
         };
-        localStorage.setItem(keyFor(uid), JSON.stringify(data)); // setItem 會新增或更新值 :contentReference[oaicite:3]{index=3}
-      }catch(e){ console.warn("saveDefaults failed", e); }
+        localStorage.setItem(keyFor(uid), JSON.stringify(data));
+      }catch{}
     }
-    // 也提供清除功能（按住 Shift 點「清空」就會清記錄）
-    $("#resetBtn").addEventListener("click", (ev)=>{
-      if (ev.shiftKey && window.__USER_ID__) {
+    $("#resetBtn").addEventListener("click",(ev)=>{
+      if(ev.shiftKey && window.__USER_ID__){
         localStorage.removeItem(keyFor(window.__USER_ID__));
         alert("已清除此使用者的記住資料");
       }
     });
 
-    // ===== LIFF 登入/初始化 =====
-    async function ensureLogin() { if (!liff.isLoggedIn()) { liff.login(); return false; } return true; }
-    async function loadProfile() {
-      try {
-        const p = await liff.getProfile(); // 取得 userId（前端識別用途） :contentReference[oaicite:4]{index=4}
-        $("#displayName").textContent = p.displayName || "—";
-        $("#userId").textContent = p.userId || "—";
+    // ===== LIFF 初始化（只在載入時做一次） =====
+    let LIFF_READY = false;
+    async function initLiffOnce(){
+      try{
+        $("#status") && ($("#status").textContent="呼叫 liff.init()…");
+        await liff.init({ liffId: LIFF_ID });
+        if(!liff.isLoggedIn()){ liff.login(); return; } // 會重導，後續中斷
+        $("#status") && ($("#status").textContent = liff.isInClient()? "已在 LINE 內開啟":"外部瀏覽器開啟");
+        const p = await liff.getProfile();
+        $("#displayName") && ($("#displayName").textContent = p.displayName || "—");
+        $("#userId") && ($("#userId").textContent = p.userId || "—");
         window.__USER_ID__ = p.userId || "";
-        if (window.__USER_ID__) loadDefaults(window.__USER_ID__); // 依 userId 帶入記住資料
-      } catch (e) { console.warn("getProfile 失敗", e); }
-    }
-    async function initLiff() {
-      $("#status") && ($("#status").textContent = "呼叫 liff.init()…");
-      await liff.init({ liffId: LIFF_ID });
-      const ok = await ensureLogin(); if (!ok) return false;
-      $("#status") && ($("#status").textContent = liff.isInClient() ? "已在 LINE 內開啟" : "外部瀏覽器開啟");
-      await loadProfile();
-      return true;
+        if(window.__USER_ID__) loadDefaults(window.__USER_ID__);
+        LIFF_READY = true;
+      }catch(e){
+        console.error("LIFF init 失敗", e);
+      }
     }
 
     // ===== 時間驗證 =====
-    const startEl = byName('startTime'); // 希望送達時間
-    const endEl   = byName('endTime');   // 最晚送達時間
+    const startEl = byName('startTime');
+    const endEl   = byName('endTime');
     const timeErr = $("#timeErr");
-    [startEl, endEl].forEach(el => { el.min = fmt(OPEN_MIN); el.max = fmt(CLOSE_MIN); el.step = 60; });
-
-    function toMin(t){ if(!t||!/^\d{2}:\d{2}$/.test(t))return null; const [h,m]=t.split(':').map(Number); return h*60+m; }
+    [startEl,endEl].forEach(el=>{ el.min=fmt(OPEN_MIN); el.max=fmt(CLOSE_MIN); el.step=60; });
+    function toMin(t){ if(!t||!/^\d{2}:\d{2}$/.test(t)) return null; const [h,m]=t.split(":").map(Number); return h*60+m; }
     function validateTimes(show=true){
       const s=toMin(startEl.value), e=toMin(endEl.value);
       let err="";
@@ -223,25 +214,74 @@
       else if(s<OPEN_MIN||s>CLOSE_MIN){ err=`希望送達時間需在 ${fmt(OPEN_MIN)}–${fmt(CLOSE_MIN)} 之間`; }
       else if(e<OPEN_MIN||e>CLOSE_MIN){ err=`最晚送達時間需在 ${fmt(OPEN_MIN)}–${fmt(CLOSE_MIN)} 之間`; }
       else if(e<=s){ err="最晚送達時間必須晚於希望送達時間"; }
-      if(show){ timeErr.style.display = err ? "block":"none"; timeErr.textContent = err; }
+      if(show){ timeErr.style.display = err? "block":"none"; timeErr.textContent = err; }
       $("#submitBtn").disabled = !!err;
       return !err;
     }
     startEl.addEventListener("input", ()=>validateTimes(true));
     endEl  .addEventListener("input", ()=>validateTimes(true));
 
-    // 任何時候修改三欄，就即時存檔（有 userId 時）
+    // 三欄即時存檔
     ["customerName","address","phone"].forEach(n=>{
-      byName(n).addEventListener("change", ()=>{ if(window.__USER_ID__) saveDefaults(window.__USER_ID__); });
+      byName(n).addEventListener("change",()=>{ if(window.__USER_ID__) saveDefaults(window.__USER_ID__); });
     });
 
-    // 送單
-    $("#orderForm").addEventListener("submit", async (e) => {
+    // ===== 送單 =====
+    $("#orderForm").addEventListener("submit", async (e)=>{
       e.preventDefault();
-      const msg = $("#submitMsg"); const btn = $("#submitBtn");
-      msg.className = "muted"; msg.textContent = "送出中…"; btn.disabled = true;
+      const btn=$("#submitBtn"); const msg=$("#submitMsg");
+      msg.className="muted"; msg.textContent="送出中…"; btn.disabled=true;
 
-      if (!validateTimes(true)) { msg.className = "err"; msg.textContent = "❌ 時間不在 08:00–17:00 或最晚未晚於希望"; btn.disabled=false; return; }
+      // 先做本地驗證
+      if(!validateTimes(true)){ msg.className="err"; msg.textContent="❌ 時間不在 08:00–17:00 或最晚未晚於希望"; btn.disabled=false; return; }
 
-      try {
-        const
+      // 確認 LIFF 狀態（不再重新 init；若尚未準備好，提示錯誤並復原）
+      if(!LIFF_READY){
+        msg.className="err"; msg.textContent="❌ LIFF 尚未就緒，請重新開啟此 LIFF 連結"; btn.disabled=false; return;
+      }
+      if(!liff.isLoggedIn()){
+        msg.className="err"; msg.textContent="❌ 尚未登入，請以 LIFF URL 登入後再送出"; btn.disabled=false; return;
+      }
+
+      const idToken = liff.getIDToken();
+      if(!idToken){
+        msg.className="err"; msg.textContent="❌ 取不到 ID Token，請以 LIFF URL 開啟並登入"; btn.disabled=false; return;
+      }
+
+      try{
+        const fd=new FormData(e.target);
+        const p=new URLSearchParams();
+        p.set("id_token", idToken);
+        ["customerName","address","phone","orderDate","startTime","endTime","qty","note"]
+          .forEach(k=>p.set(k,(fd.get(k)||"").toString().trim()));
+
+        const res = await fetch(GAS_ENDPOINT, {
+          method:"POST",
+          headers:{ "Content-Type":"application/x-www-form-urlencoded;charset=UTF-8" },
+          body:p.toString()
+        });
+
+        let json={}; try{ json=await res.json(); }catch{}
+        if(!res.ok || !json.ok) throw new Error(json.message || `HTTP ${res.status}`);
+
+        if(window.__USER_ID__) saveDefaults(window.__USER_ID__);
+
+        msg.className="ok"; msg.textContent=`已送出 ✅ 訂單編號：${json.orderId}`;
+        e.target.reset(); validateTimes(true);
+      }catch(err){
+        console.error(err);
+        msg.className="err"; msg.textContent="❌ "+(err?.message||err);
+      }finally{
+        btn.disabled=false;
+      }
+    });
+
+    // 啟動
+    (async function(){
+      prefillFromQuery();
+      validateTimes(true);
+      await initLiffOnce();
+    })();
+  </script>
+</body>
+</html>
