--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
       <div class="grid">
         <div>
           <label>客戶/店家名稱
-            <input name="customerName" required placeholder="張三火鍋/小林飲料店">
+            <input name="customerName" required placeholder="阿綸熱炒/小郭飲料店">
           </label>
         </div>
         <div>
           <label>外送地址
-            <input name="address" required placeholder="台北市○○區○○路 1 號">
+            <input name="address" required placeholder="新北市三重區○○路 1 號">
           </label>
         </div>
         <div>
@@ -110,7 +110,7 @@
         </div>
         <div>
           <label>備註
-            <textarea name="note" rows="3" placeholder="送達時間區間、冰塊規格、上樓需求等"></textarea>
+            <textarea name="note" rows="3" ></textarea>
           </label>
         </div>
       </div>
